@@ -206,4 +206,12 @@
     </para>
 !Itapset/dentry.stp
     </chapter>
+  <chapter id="logging.stp">
+    <title>Logging Tapset</title>
+    <para>
+      This family of functions is used to send simple
+      message strings to various destinations.
+    </para>
+!Itapset/logging.stp
+    </chapter>
 </book>
